--- a/src/App.css
+++ b/src/App.css
@@ -10,11 +10,12 @@
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
+  cursor: pointer;
+}
+.logo.animated {
+  animation-play-state: running;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
@@ -27,14 +28,26 @@
   }
 }
 
+@keyframes logo-spin-reversed {
+  from {
+    transform: rotate(360deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
+}
+
 @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  .logo {
+    animation: logo-spin infinite 2s linear paused;
+  }
+  .logo.reversed {
+    animation-name: logo-spin-reversed;
   }
 }
 
 .card {
-  padding: 2em;
+  padding: 1em;
 }
 
 .read-the-docs {
